# Orbitit

./: .gitignore  .pylintrc  Data_FldHeptA4.py  Data_FldHeptA4xI.py  Geom3D.py  Geom4D.py  GeomGui.py  GeomTypes.py  Heptagons.py  LICENSE.txt  Orbitit.py  PS.py  PolyhedraBrowser.py  README  README.md  STD-TEST  Scene_24Cell.py  Scene_5Cell.py  Scene_8Cell.py  Scene_EqlHeptA5xI.py  Scene_EqlHeptA5xI_GD.py  Scene_EqlHeptA5xI_GI.py  Scene_EqlHeptFromKite.py  Scene_EqlHeptS4A4.py  Scene_EqlHeptS4xI.py  Scene_FldHeptA4.py  Scene_FldHeptA4xI.py  Scene_FldHeptA5.py  Scene_FldHeptS4.py  Scene_Orbit.py  Scene_Rectified24Cell.py  Scene_Rectified8Cell.py  Scene_RegHeptA4xI_0.py  Scenes3D.py  TODO  X3D.py  __init__.py  filter.py  generate-compounds-of-s4a4.py  generate-compounds.py  (+25 more)
Data_FldHeptA4/: filter-roots.py  frh-roots-0_0_1_0_0_1_0-fld_parallel.0-shell_1_loose-opp_shell_1_loose.py  frh-roots-0_0_1_0_0_1_0-fld_parallel.0-strip_1_loose-opp_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_shell.0-alt_strip_1_loose-opp_alt_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_shell.0-alt_strip_1_loose-opp_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_shell.0-strip_1_loose-opp_alt_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_shell.0-strip_1_loose-opp_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_w.0-alt_strip_1_loose-opp_alt_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_w.0-alt_strip_1_loose-opp_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_w.0-shell_1_loose-opp_alt_rot_strip_1_loose.py  frh-roots-0_1_0_1_0_0_1-fld_w.0-shell_1_loose-opp_rot_strip_1_loose.py  (+353 more)
(+237 files in other folders)
