[metadata]
name=orbitit
version=0.5.3
author=marcelteun
author_email=marcelteun@gmail.com
description=Utility for handling polyhedra
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/marcelteun/Orbitit/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = orbitit
python_requires = >=3.6
